Letzte Korrektur des Inhalts vor der Abgabe wurde eingefuegt

--- a/references.bib
+++ b/references.bib
@@ -738,3 +738,20 @@ Die Softwareverteilung ist ein kritischer Prozess, da mit ihr auch Betriebssyste
 	note = {Library Catalog: www.duden.de},
 	file = {Snapshot:/Users/eddie/Zotero/storage/DY7UTSUN/Mapping.html:text/html}
 }
+
+@inreference{html-renderer_2020,
+	title = {{HTML}-Renderer},
+	rights = {Creative Commons Attribution-{ShareAlike} License},
+	url = {https://de.wikipedia.org/w/index.php?title=HTML-Renderer&oldid=196062351},
+	abstract = {Ein {HTML}-Renderer, oft Browser-Engine genannt, ist ein Programm zur Visualisierung von Hypertext Markup Language und Scalable Vector Graphics. Mit „Visualisierung“ ist hier die Durchführung der Bildsynthese gemeint.
+{HTML} war ursprünglich eine (strukturelle) Beschreibung von Text, eine Art von Rich Text mit Hyperlink-Funktionalität, von dem Erfinder des World Wide Web, Tim Berners-Lee, „{IIRC} Hypertext“ genannt. Zwar gibt es {HTML}-Attribute, die direkt das Aussehen des Elements beschreiben (etwa die Schriftgröße), diese werden jedoch in {XHTML} und neueren Standards als hinfällig eingestuft und nur noch aus Gründen der Kompatibilität unterstützt.Das spiegelt wider, dass {HTML} nicht festlegen soll, wie ein Dokument anzuzeigen ist. Dadurch ist {HTML} so flexibel, dass es z. B. in einer Beamer-Präsentation, auf einem Computermonitor, einem {PDA} oder einem Schwarz-Weiß-{LCD} angezeigt werden kann. All diese Anzeigegeräte haben unterschiedliche Möglichkeiten für die visuelle Gestaltung des Inhaltes. Da {HTML} keine solche Gestaltung festlegt, kann das Anzeigeprogramm das {HTML} anzeigegerätespezifisch interpretieren und das visuelle Layout mehr oder weniger frei gestalten.
+Der {HTML}-Renderer ordnet dieser eher semantisch-strukturellen Definition eine visuelle Darstellung des Textes zu.
+Dies geschieht in nahezu allen Browsern mittels Cascading Style Sheets ({CSS}). Die Stylesheets enthalten eine Liste von Selektoren (Bedingungen an die Teilstruktur des {HTML}-Dokuments, die zutreffen müssen, damit die Regeln angewendet werden) und Regeln (Attribute, die auf die der entsprechenden Teilstruktur zugeordnete visuelle Repräsentation angewendet werden). Per Voreinstellung liefert der Browser ein Standard-Stylesheet aus, das die meisten Elemente grundformatiert. {CSS} ist sehr flexibel. Es ist möglich, diesen Satz von Regeln komplett pro Benutzer oder pro Dokument auszutauschen. Dadurch sind den Darstellungsvarianten fast keine Grenzen gesetzt.
+Ein {HTML}-Renderer ist also Teil eines Webbrowsers, der einer eher semantisch orientierten Dokumentenstruktur eine visuelle Darstellung zuordnet. Eine Layout-Engine interpretiert das Layoutmodell, das durch {CSS} definiert wurde, und füllt in dieses Layout den durch {HTML} semantisch angereicherten Text.},
+	booktitle = {Wikipedia},
+	urldate = {2020-07-08},
+	date = {2020-01-22},
+	langid = {german},
+	note = {Page Version {ID}: 196062351},
+	file = {Snapshot:/Users/eddie/Zotero/storage/2PPZSQNS/index.html:text/html}
+}
