--- a/sections/Abstract.tex
+++ b/sections/Abstract.tex
@@ -9,7 +9,7 @@ Das Ziel dieser Abhandlung ist es, für PluraPolit die Bedingungen zu ermitteln,
 %Todo die Veränderung der Zielsetzung einheitlich überführen
 
 %Methodik
-Um dies herauszufinden, wurden Bedingungen aus einer Literaturrecherche abgeleitet und Leitfadeninterviews mit Experten durchgeführt. Dabei wurden die Fragen für die Interviews aus den Bedingungen abgeleitet. Die Befragten wurden aufgrund ihrer jahrelangen Erfahrung im Bereich der Microservice-Architektur und Start-up-Branche ausgewählt.
+Um dies herauszufinden, wurden Bedingungen aus einer Literaturrecherche erstellt und Leitfadeninterviews mit Experten durchgeführt. Dabei wurden die Fragen für die Interviews aus den Bedingungen abgeleitet. Die Befragten wurden aufgrund ihrer jahrelangen Erfahrung im Bereich der Microservice-Architektur und Start-up-Branche ausgewählt.
 
 %Ergebnisse
 Die Ergebnisse zeigten, dass vor der Umstellung folgende Bedingungen erfüllt sein müssen:
@@ -20,7 +20,7 @@ Die Ergebnisse zeigten, dass vor der Umstellung folgende Bedingungen erfüllt se
 	\item Es ist möglich, die Verantwortung für ein Geschäftsprozess an ein eigenständiges Team zu geben
 	\item Die Services können untereinander über Schnittstellen kommunizieren
 	\item Das Netzwerk ermöglicht die Kommunikation zwischen Services
-	\item Der Zugriff auf das Netzwerk ist vor Unbefugten gesichert
+	\item Das Netzwerk ist vor Zugriffen von Ungefugten gesichert
 \end{enumerate}
 
 Als wichtigste Bedingung stellte sich die Bewertung der Profitabilität heraus, welche vom zu erwartenden Mehrwert und den notwendigen Kosten abhängt.
@@ -36,21 +36,21 @@ Da für PluraPolit keine nachvollziehbaren Vorteile aus einer Umstellung erkannt
 As the codebase grows, the effort required to develop and implement new functions increases. This is especially due to the fact that during development many dependencies between classes and methods have evolved. To counter this, PluraPolit has decided to convert the current monolithic architecture into a microservice architecture.
 
 %Zielsetzung
-The aim of this paper is to identify for PluraPolit the conditions necessary for a possible conversion and to provide a clear evaluation for the project.
+The aim of this paper is to identify the conditions necessary for PluraPolit for a possible conversion and to provide a clear evaluation for the project.
 
 %Methodik
-To find this out, conditions were derived from a literature search and guideline interviews with experts were conducted. The questions for the interviews were derived from the conditions. The interviewees were selected on the basis of their years of experience in the field of microservice architecture and start-up industries.
+To research on this topic, conditions were derived from a literature search and guideline interviews with experts were conducted. The questions for the interviews were derived from the conditions. The interviewees were selected on the basis of their years of experience in the field of microservice architecture and start-up industries.
 
 %Ergebnisse
-The results showed that the following conditions must be met:
+The results show that the following conditions must be met:
 \begin{enumerate}
-	\item The conversion is lucrative for a start-up
-	\item The system has a certain complexity
-	\item The business processes can be separated
-	\item It is possible to give the responsibility for a business process to an independent team
+	\item The conversion need to be lucrative for a start-up
+	\item The system has a certain degree of complexity
+	\item The business processes are able to be separated
+	\item It is possible to transfer the responsibility for a business process to an independent team
 	\item The services can communicate with each other via interfaces
 	\item The network enables communication between services
-	\item Access to the network is protected against unauthorized persons
+	\item The network is secured against unauthorized access
 \end{enumerate}
 
 The most important condition was found to be profitability, which depends on the expected added value and the necessary costs.
