--- a/sections/Anhang/schlaak.tex
+++ b/sections/Anhang/schlaak.tex
@@ -128,7 +128,7 @@ S: Es gibt aber auch hier keine strikte Trennung. Das heißt das der Übergang v
 
 E: Ein sehr guter Einwand. Dann würde ich jetzt gerne zur letzten Frage gehen.
 
-E: Mit ihrem aktuellen Wissenstand, welches Softwarearchitektur empfehlen Sie PluraPolit?
+E: Mit ihrem aktuellen Wissensstand, welches Softwarearchitektur empfehlen Sie PluraPolit?
 
  \label{appendix:s-31}
 S:  Also womit ich sehr gute Erfahrungen gemacht habe, ist tatsächlich eine Architektur, die im Backend schon eine große Anwendung nutzt. Die also nicht nur die Daten bereitstellt, sondern auch so Backoffice Tätigkeit zulässt. Also wie zum Beispiel das Management von irgendwelchen Daten oder so weiter, aber eher für die Schnittstellen, die die Mitarbeiter nutzten und nicht Endkunden.
