--- a/sections/Auswertung.tex
+++ b/sections/Auswertung.tex
@@ -3,7 +3,7 @@
 
 Um die Bedingungen aus \cref{sec:bedingungen} zu bestätigen oder zu widerlegen, wurden drei Interviews mit Experten aus der Start-up-Branche geführt.
 
-Die Interviewergebnisse zeigen, dass Microservices eine zugrundeliegende inhaltliche Trennung benötigen (siehe \cref{sec:frage1}) und die Vielseitigkeit des Unternehmens die Entscheidung für eine Umstellung beeinflusst. Bestätigt wurde von Herr Rahles und Herr Troppmann, die in ihren Aussagen den Mangel einer separaten Geschäftsdomäne betonten (siehe \cref{sec:frage5}).
+Die Interviewergebnisse zeigen, dass Microservices eine zugrundeliegende inhaltliche Trennung benötigen (siehe \cref{sec:frage1}) und die Vielseitigkeit des Unternehmens die Entscheidung für eine Umstellung beeinflusst. Dies wurde von Herr Rahles und Herr Troppmann bestätigt, die in ihren Aussagen den Mangel einer separaten Geschäftsdomäne betonten (siehe \cref{sec:frage5}).
 
 \label{sec:vielseitigkeit}
 Damit bekräftigen die Interviewergebnisse die Annahme, dass Services anhand der Geschäftsprozesse geteilt werden und bestätigen den Ansatz, dass ein System eine gewisse Vielseitigkeit benötigt, bevor es in einzelne Services geteilt werden kann.
@@ -17,7 +17,7 @@ Auch fügte Christoph Rahles in seinem Interview hinzu, dass bei mehreren Anwend
 Die Ergebnisse belegen den Anstieg der Komplexität innerhalb einer Microservice-Architektur, welcher in \cref{sec:verteilte-systeme} betrachtet wurde. Der Vergleich zwischen den Architekturstilen aus \cref{sec:monolith} zeigt, dass monolithische Systeme besonders den Bereitstellungsprozess, das Fehlermanagement und die systemübergreifenden Tests vereinfachen. Daraus lässt sich schließen, dass eine Microservice-Architektur im Vergleich zu einem Monolithen komplexer ist. Dies deckt sich mit den Empfehlungen der Experten (siehe \cref{sec:frage5}).
 %Todo passendere Schlussfolgerung überlegen siehe Kommentare von Anne
 
-Die höhere Komplexität setzt ein tieferes Verständnis über das Erstellen und Verwalten der Infrastruktur voraus und fordert, abhängig des Wissenstandes im Unternehmen, Weiterbildungen durchzuführen oder auf externe Fachkräfte zurückzugreifen.
+Die höhere Komplexität setzt ein tieferes Verständnis über das Erstellen und Verwalten der Infrastruktur voraus und fordert, abhängig des Wissensstandes im Unternehmen, Weiterbildungen durchzuführen oder auf externe Fachkräfte zurückzugreifen.
 
 \label{sec:netzwerk}
 Aus den Interviews geht hervor, dass die Sicherheit und der Austausch von Nachrichten eine Grundvoraussetzung für jedes Netzwerk ist. Dies bestätigt die angenommenen Vorraussetzungen an das Netzwerk (siehe \cref{sec:bedingungen}). Dass der Datendurchsatz von keinem Experten explizit angesprochen wurde, kann man darauf zurückführen, dass dieser als Grundvoraussetzung gesehen wird und keine Voraussetzung für eine Microservice-Architektur ist.
@@ -39,4 +39,4 @@ Bei der Auswertung der Ergebnisse muss berücksichtigt werden, dass sich diese a
 
 Auch wurden die Bedingungen aus einer Literaturrecherche erstellt, demnach wurden diese ausschließlich aus der Theorie abgeleitet. Die Erfahrungen der Experten bringen Kenntnisse aus der Praxis ein und validieren die Bedingungen. Würde eine qualitative Untersuchung der Bedingungen an Unternehmen durchgeführt, die ihre Softwarearchitektur umgestellt haben, könnten womöglich andere Ergebnisse gefunden werden.
 
-Die Empfehlungen für weitere Forschungen sind daher, eine ähnliche qualitative Untersuchung bei anderen Unternehmensarten durchzuführen und mit Hilfe einer Rekonstruktion Bedingungen von Unternehmen zu ermitteln, die bereits auf Microservices umgestellt haben.
+Die Empfehlungen für weitere Forschungen sind daher, eine ähnliche qualitative Untersuchung bei anderen Unternehmensarten durchzuführen und mit Hilfe einer Rekonstruktion Bedingungen von Unternehmen zu ermitteln, die bereits Microservices verwenden.
