--- a/sections/Einleitung.tex
+++ b/sections/Einleitung.tex
@@ -1,5 +1,3 @@
-%Todo Zeitformen noch einmal überprüfen
-
 \section{Einleitung}
 
 Für ein junges Unternehmen im Bereich der digitalen Produktentwicklung ist es wichtig, Ideen schnell umzusetzen und ein erstes Feedback zu erhalten. Dies hilft bei der Bestätigung von Annahmen und bei der Gewinnung von Investoren.
@@ -16,7 +14,7 @@ Im Gegensatz zu anderen Anbietern von Nachrichten rund um Politik, stellt PluraP
 
 \subsection{Problemstellung}
 
-Umgesetzt wurde die Plattform in Ruby on Rails\footnote{Weitere Informationen zu Ruby on Rails ist im \cref{sec:einordnung} beschrieben.} im Backend und React.js\footnotemark im Frontend. Dabei liefert das Backend auf Anfrage Inhalte an das Frontend und kümmert sich um die Speicherung von Daten. Das Frontend im Gegensatz fordert beim Laden der Webseite alle genötigten Informationen an und stellt sie anschließend dar. Trotz dieser Einteilung handelt es sich um eine Applikation mit gemeinsamer Codebase und einem Bereitstellungsprozess.
+Umgesetzt wurde die Plattform in Ruby on Rails\footnote{Weitere Informationen zu Ruby on Rails ist im \cref{sec:einordnung} beschrieben.} im Backend und React.js\footnotemark im Frontend. Dabei liefert das Backend auf Anfrage Inhalte an das Frontend und kümmert sich um die Speicherung von Daten. Das Frontend im Gegensatz fordert beim Laden der Webseite alle benötigten Informationen an und stellt sie anschließend dar. Trotz dieser Einteilung handelt es sich um eine Applikation mit gemeinsamer Codebase und einem Bereitstellungsprozess.
 
 \footnotetext{
 React.js ist eine JavaScript Bibliothek zum Erstellen von Benutzeroberflächen. Diese verwaltet die Darstellung im HTML-DOM und ermöglicht dem Entwickler, Informationen zwischen Funktionen zu administrieren \parencite{react_webpage}.
@@ -25,7 +23,7 @@ React.js ist eine JavaScript Bibliothek zum Erstellen von Benutzeroberflächen. 
 Gehostet werden die Applikationen über den Cloud-Computing-Anbieter Amazon Web Services\footnotemark (AWS).
 \footnotetext{AWS ist ein Tochterunternehmen des Online-Versandhändlers Amazon mit einer Vielzahl an Diensten im Bereich Cloud-Computing \parencite{amazon_homepage}.}
 
-Es wurde sich für diesen Dienst entschieden, um möglichst geringe Fixkosten zu haben und bei Bedarf die Kapazität ändern zu können. Die Anwendung wird in einem Docker-Container\footnote{Docker-Container sind isolierte virtuelle Umgebungen, in der eine Anwendung separat vom System des Rechners betrieben wird. Dadurch können Applikationen leicht von einem Computer zu einem Hosting Dienst geladen werden \parencite{docker_container}.} installiert und per Github Actions\footnote{Github Actions ist ein Software Dienst von Github, welches hilft Prozesse zu automatisieren. Es kann z.~B. zum automatischen Bereitstellen einer Webseite verwendet werden \parencite{github_actions}.} an AWS geliefert. Dort wird die Applikation in den Elastic Container Service\footnote{Elastic Container Service ist ein Container-Orchestrierungs-Service von Amazon Web Services, mit dessen Hilfe Container skalierbar verwaltet werden können \parencite{aws_ecs}.} (ECS) geladen und von Fargate\footnote{Fargate ist eine Serverless-Datenverarbeitungs-Engine, welche Container im Rahmen der vordefinierten Parameter verwaltet. So werden z.~B. durch diesen Dienst bei erhöhtem Bedarf neue Instanzen bereitgestellt und bei Verlust von Last Container-Instanzen eliminiert \parencite{aws_fargate}.} verwaltet. 
+Es wurde sich für diesen Dienst entschieden, um die Fixkosten möglichst gering zu halten und bei Bedarf die Kapazität ändern zu können. Die Anwendung wird in einem Docker-Container\footnote{Docker-Container sind isolierte virtuelle Umgebungen, in der eine Anwendung separat vom System des Rechners betrieben wird. Dadurch können Applikationen leicht von einem Computer zu einem Hosting Dienst geladen werden \parencite{docker_container}.} installiert und per Github Actions\footnote{Github Actions ist ein Software Dienst von Github, welches hilft Prozesse zu automatisieren. Es kann z.~B. zum automatischen Bereitstellen einer Webseite verwendet werden \parencite{github_actions}.} an AWS geliefert. Dort wird die Applikation in den Elastic Container Service\footnote{Elastic Container Service ist ein Container-Orchestrierungs-Service von Amazon Web Services, mit dessen Hilfe Container skalierbar verwaltet werden können \parencite{aws_ecs}.} (ECS) geladen und von Fargate\footnote{Fargate ist eine Serverless-Datenverarbeitungs-Engine, welche Container im Rahmen der vordefinierten Parameter verwaltet. So werden z.~B. durch diesen Dienst bei erhöhtem Bedarf neue Instanzen bereitgestellt und bei Verlust von Last Container-Instanzen eliminiert \parencite{aws_fargate}.} verwaltet. 
 Die Daten werden in einer PostgreSQL\footnote{PostgreSQL ist eine objektrelationale Datenbank, welche sowohl Elemente einer relationalen als auch einer Objektdatenbank besitzt \parencite{postgresql}.} Datenbank abgespeichert, die auf einer Relational Database Service\footnote{RDS ist ein Service von Amazon Web Services, mit dessen Hilfe relationale Datenbanken verwaltet werden. Der Dienst ermöglicht das Aufsetzen, Managen und Skalieren von Datenbanken, wie z.~B. MySQL, MariaDB und PostgreSQL \parencite[vgl.][S.161 f.]{baron_aws_2016}.} (RDS) Instanz hinterlegt ist. 
 Bilder und Tonaufnahmen werden in einem Simple Storage Service Bucket\footnote{Der Speicherdienst von AWS S3 ist einer der ersten Dienste des Cloud-Computing-Anbieters. Er erleichtert die Speicherung von Objekten in der Cloud jeglichen Formats und lässt sich einfach verwalten. Die verwendete Speichermenge ist dynamisch und richtet sich automatisch nach der Größe der Dateien \parencite[vgl.][S. 23]{baron_aws_2016}.} (S3) gespeichert und stehen der Webseite per URL zur Verfügung. 
 Um automatisch zu jedem Statement ein Intro zu generieren, wurde eine AWS Lambda\footnote{Amazon Lambda ist ein Service von AWS, über den Funktionalität innerhalb der Cloud ausgeführt wird. Es handelt sich dabei um ein Service der Serverless ist, was bedeutet, dass man sich nicht um das Betriebssystem des Servers kümmern muss. Somit können kleine Programme mit wenig Aufwand ausgeführt werden \parencites[vgl.][Kap. 15.3]{wolff_microservices_2018}{aws_lambda}.} Funktion geschrieben, die auf der Basis von Beschriftungstexten für jede Audioaufzeichnung eine weitere Aufnahme für die Einleitung erstellt.
