--- a/sections/Methodik/durchfuehrung.tex
+++ b/sections/Methodik/durchfuehrung.tex
@@ -1,6 +1,6 @@
 \subsection{Durchführung des Interviews}
 
-Die drei Experten wurden eine Woche vor dem Interview per Nachricht (Slack, oder WhatsApp) kontaktiert und zu einem Gespräch eingeladen, welches online stattfinden sollte. Es wurde ein Konferenzgespräch von Angesicht zu Angesicht gewählt, um eine persönlichere Atmosphäre zu generieren und gleichzeitig die Kontaktbeschränkungen in Phase der Coronapandemie einzuhalten.
+Die drei Experten wurden eine Woche vor dem Interview per Nachricht (Slack, oder WhatsApp) kontaktiert und zu einem Gespräch eingeladen, welches online stattgefunden hat. Es wurde ein Konferenzgespräch von Angesicht zu Angesicht gewählt, um eine persönlichere Atmosphäre zu generieren und gleichzeitig die Kontaktbeschränkungen in der Coronapandemie einzuhalten.
 
 Alle Interviewpartner bekamen die Fragen zur Vorbereitung vorab zugeschickt. Sie wurden vor dem Gespräch in Kenntnis gesetzt, dass dieses aufgezeichnet wird, um die anschließende Tran­skrip­ti­on zu ermöglichen. Dies geschah zum einen während der Absprachen eine Woche vor den Interviews, sowie unmittelbar vor der Aufnahme. Des Weiteren gaben die Experten eine mündliche Bestätigung ab, dass ihre Aussagen in dieser Abhandlung verwendet werden dürfen.
 
@@ -24,18 +24,18 @@ Eingeleitet wurde diese Frage mit den Erkenntnissen aus der Literaturrecherche, 
 
 Diese Zusammenfassung sollte den Experten als Möglichkeit dienen, diese Annahme zu berichtigen und sich bei ihren Antworten darauf zu beziehen.
 
-Die Frage zielte darauf ab, die Auffassung zu valideren, dass:
+Die Frage zielt darauf ab, die Auffassung zu valideren, dass:
 \begin{enumerate}
 	\item Teams eigenverantwortlich arbeiten und
 	\item ausschließlich über die Schnittstellen auf Informationen zugreifen.
 \end{enumerate}
-Es wurde sich für eine möglichst offene Frage entschieden, um den Experten die Möglichkeit zugeben, uneingeschränkt zu antworten.
+Es wurde sich für eine möglichst offene Frage entschieden, um den Experten die Möglichkeit zu geben, uneingeschränkt zu antworten.
 
 Anschließend wurde Frage 3 gestellt:
 
 \textit{Gibt es in Ihren Augen irgendwelche technischen Anforderungen, die PluraPolit erfüllen sollte? }
 
-Frage 3 zielte darauf ab, Bedingung 5, 6 und 7 zu überprüfen (siehe \cref{sec:bedingungen}). Demnach wurde erwartet, dass ein Netzwerk: 
+Frage 3 zielt darauf ab, Bedingung 5, 6 und 7 zu überprüfen (siehe \cref{sec:bedingungen}). Demnach wurde erwartet, dass ein Netzwerk: 
 
 \begin{enumerate}
 	\item die Kommunikation zwischen den Services ermöglicht,
@@ -45,11 +45,11 @@ Frage 3 zielte darauf ab, Bedingung 5, 6 und 7 zu überprüfen (siehe \cref{sec:
 
 Auch hier wählte man bewusst eine offene Fragestellung.
 
-Frage 4 ging der Fragestellung nach, ob Microservices in einem dynamischen Umfeld eingesetzt werden sollten. Hierfür wurde vorab eine Zusammenfassung aus der Literaturrecherche eingeschoben:
+Frage 4 geht der Fragestellung nach, ob Microservices in einem dynamischen Umfeld eingesetzt werden sollten. Hierfür wurde vorab eine Zusammenfassung aus der Literaturrecherche eingeschoben:
 
 \textit{Ein Start-up zeichnet sich dadurch aus, dass es insbesondere in der Anfangsphase zu vielen Veränderungen in der ursprünglichen Geschäftsidee kommt. Microservices auf der anderen Seite zeichnen sich dadurch aus, dass sie feste Schnittstellen und Kontextgrenzen besitzen.}
 
-Die Zusammenfassung sollte den Schwerpunkt der Fragestellung auf die Phasen eines Start-up lenken. Das Ziel dieser Frage war es, den Zeitpunkt, oder das Ereignis zu ermitteln, ab wann ein Start-up Microservices verwenden sollte. Ging der Experte nicht von selbst auf diese Fragestellung ein, gab es zusätzliche Fragen im Interview.
+Die Zusammenfassung sollte den Schwerpunkt der Fragestellung auf die Phasen eines Start-up lenken. Das Ziel dieser Frage ist es, den Zeitpunkt, oder das Ereignis zu ermitteln, ab wann ein Start-up Microservices verwenden sollte. Ging der Experte nicht von selbst auf diese Fragestellung ein, gab es zusätzliche Fragen im Interview.
 
 Abschließend wurde das Interview mit folgender Frage beendet:
 
