--- a/sections/Methodik/experten.tex
+++ b/sections/Methodik/experten.tex
@@ -3,7 +3,7 @@
 Für das Interview wurden Christoph Rahles, Alexander Troppmann und Sebastian Schlaak befragt.
 Diese Experten wurden aufgrund ihrer jahrelangen Erfahrung im Bereich der Microservice-Architektur und Start-up-Branche ausgewählt. Sowohl Herr Rahles, Herr Troppmann und Herr Schlaak sind Senior Software Developer mit Erfahrungen im Management. So haben alle drei mehre Jahre als Chief Technology Officer (CTO) gearbeitet und können fundierte Aussagen über softwarearchitektonische Entscheidungen geben. Darüber hinaus hält Herr Troppmann Informationsveranstaltungen in denen er erklärt, wie man mit Hilfe der Programmiersprache Golang leichtgewichtige Microservices erstellt.
 
-Des Weiteren wurden alle drei ausgewählt, da sie die Softwarearchitektur von PluraPolit kennen und bei der Entwicklung beteiligt waren. So hat Herr Rahles insbesondere in der Anfangsphase PluraPolit geholfen, die Softwarearchitektur mit aufzubauen und kennt diese detailliert.
+Des Weiteren wurden alle drei ausgewählt, da sie die Softwarearchitektur von PluraPolit kennen und bei der Entwicklung beteiligt waren. So hat Herr Rahles die Softwarearchitektur von PluraPolit in der Anfangsphase mit aufgebaut und kennt diese detailliert.
 
 Herr Troppmann und die Mitarbeiter von PluraPolit haben erst vor einigen Wochen gemeinsam an einem Hackathon teilgenommen und die Plattform konzeptionell weiter entwickelt. Es wurden Entwürfe erstellt, wie PluraPolit auch für den Schulunterricht eingesetzt werden kann. Folglich kennt Herr Troppmann den aktuellen Stand der Bildungsplattform.
 
