--- a/sections/Theory/Produktmarketfit.tex
+++ b/sections/Theory/Produktmarketfit.tex
@@ -29,4 +29,4 @@ Das Start-up wird hinsichtlich Technologie, Struktur und Produkt angepasst, dami
 
 Besondere die Phasen 1 und 2 zeichnen sich durch schnelles, fokussiertes Lernen aus, welches in kontinuierlichen Anpassungen des Geschäftsmodells endet. Folglich kommt es in diesen beiden Phasen zu ständigen Änderungen des Produktes und des Geschäftsprozesses. Erst nach dem Erreichen des Product-Market Fits stabilisiert sich das Produkt und die Skalierung dessen rückt in den Mittelpunkt.
 
-Im Gegensatz zu den meisten Start-ups, ist PluraPolit ein gemeinnütziges Unternehmen. Der Fokus liegt deshalb nicht auf dem Erwirtschaften von Gewinn sondern auf der Maximierung der Kundeninteraktion. Da Interaktion sich aus der Akzeptanz der Anwender ergibt, ist PluraPolit bestrebt, ein Product-Market Fit zu erreichen. Zum aktuellen Zeitpunkt befindet es sich jedoch noch in Phase Zwei.
+Im Gegensatz zu den meisten Start-ups, ist PluraPolit ein gemeinnütziges Unternehmen. Der Fokus liegt deshalb nicht auf dem Erwirtschaften von Gewinn sondern auf der Maximierung der Kundeninteraktion. Da Interaktion sich aus der Akzeptanz der Anwender ergibt, ist PluraPolit bestrebt, ein Product-Market Fit zu erreichen. Zum aktuellen Zeitpunkt befindet es sich jedoch noch in Phase 2.
