--- a/sections/Theory/bedingungen.tex
+++ b/sections/Theory/bedingungen.tex
@@ -30,13 +30,13 @@ Bei der Beschreibung der Situation eines Start-ups in \cref{sec:start-up} wurde 
 
 Aus der Literaturrecherche ergeben sich zusammenfassend neun Bedingungen:
 \begin{enumerate}
-	\item Es ist möglich, die Verantwortung für ein Geschäftsprozess an ein eigenständiges Team zu geben.
-	\item Die Services greifen ausschließlich auf Ressourcen zu, die über die Schnittstellen erreicht werden können.
-	\item Das System weist eine gewisse Komplexität auf.
-	\item Die Geschäftsabläufe lassen sich voneinander trennen.
-	\item Das Netzwerk ermöglicht die Kommunikation zwischen den Services.
-	\item Der Zugriff auf das Netzwerk ist vor Unbefugten gesichert.
-	\item Das Netzwerk hat ein hohen Datendurchsatz.
-	\item Die Services verfügen über Schnittstellen, die Server zu Server Kommunikation ermöglichen.
-	\item Es liegt ein Product-Market Fit vor.
+	\item Es ist möglich, die Verantwortung für ein Geschäftsprozess an ein eigenständiges Team zu geben
+	\item Die Services greifen ausschließlich auf Ressourcen zu, die über die Schnittstellen erreicht werden können
+	\item Das System weist eine gewisse Komplexität auf
+	\item Die Geschäftsabläufe lassen sich voneinander trennen
+	\item Das Netzwerk ermöglicht die Kommunikation zwischen den Services
+	\item Das Netzwerk ist vor Zugriffen von Ungefugten gesichert
+	\item Das Netzwerk hat ein hohen Datendurchsatz
+	\item Die Services verfügen über Schnittstellen, die Server-zu-Server-Kommunikation ermöglichen
+	\item Es liegt ein Product-Market Fit vor
 \end{enumerate}
