--- a/sections/Theory/microservice.tex
+++ b/sections/Theory/microservice.tex
@@ -8,12 +8,14 @@ Da viele Programmiersprachen den Informationsaustausch über HTTP ermöglichen, 
 
 Der Austausch über standardisierte Kommunikationswege ermöglicht, dass Services erstellt werden, die austauschbar sind \parencite[vgl.][Kap. 1.2]{wolff_microservices_2018}. Das hat zur Folge, dass z.~B. einige Services durch Dienste von Drittanbietern ausgeführt und Entwicklungskosten eingespart werden. Es wird dadurch auch die Möglichkeit geschaffen, auf bestehender Logik aufzubauen und ältere Systeme mit modernen Technologien zu verbinden.
 
-Wie in \cref{sec:ddd} beschrieben, ermöglichen es Kontextgrenzen, Daten nach eigenem ermessen zu benennen und zu verwalten. Jeder Dienst besitzt eine eigene Datenspeicherung, z.~B. in Form eines File-Storage-Systems oder einer Datenbank \parencite[vgl.][Kap. 2.1.3]{newman_monolith_2019}. Das bedeutet für das Gesamtsystem: keine einheitliche Datenspeicherung, jeder Service verwaltet die notwendigen Informationen eigenständig. Zum Erhalt der Funktionalität des gesamten Systems, muss im Vorfeld bestimmt werden, wie der Informationsaustausch zwischen den Services abläuft \parencite[vgl.][Kap. 4.1]{wolff_microservices_2018}. Es muss festgelegt werden, welche Services welche Informationen verwalten und bei Abhängigkeiten zu anderen Diensten sind die Schnittstellen festzulegen. Insbesondere die genauen Endpunkte und die zu erwarteten Informationen müssen bestimmt werden. Die Handhabung innerhalb eines Services obliegt dann wieder dem einzelnen Team. 
+Wie in \cref{sec:ddd} beschrieben, ermöglichen es Kontextgrenzen, Daten nach eigenem ermessen zu benennen und zu verwalten. Jeder Dienst besitzt eine eigene Datenspeicherung, z.~B. in Form eines File-Storage-Systems oder einer Datenbank \parencite[vgl.][Kap. 2.1.3]{newman_monolith_2019}. Das bedeutet für das Gesamtsystem: keine einheitliche Datenspeicherung und jeder Service verwaltet die notwendigen Informationen eigenständig. Zum Erhalt der Funktionalität des gesamten Systems, muss im Vorfeld bestimmt werden, wie der Informationsaustausch zwischen den Services abläuft \parencite[vgl.][Kap. 4.1]{wolff_microservices_2018}. Es muss festgelegt werden, welche Services welche Informationen verwalten und bei Abhängigkeiten zu anderen Diensten sind die Schnittstellen festzulegen. Insbesondere die genauen Endpunkte und die zu erwarteten Informationen müssen bestimmt werden. Die Handhabung innerhalb eines Services obliegt dann wieder dem einzelnen Team. 
 
 Gibt es einen Service, der Informationen von einem anderen Dienst benötigt, fordert dieser die Daten über öffentliche Schnittstellen aktiv an. Durch die Verwaltung identischer Informationen durch mehrere Dienste kommt es jedoch zu unterschiedlichen Datenständen \parencite[vgl.][Kap. 4.1]{wolff_microservices_2018}. So besteht die Herausforderung, Informationen zwischen Services konsistent zu halten.
 
-Die volle Unabhängigkeit eines Microservice kann nur erreicht werden, wenn dieser auch für die Benutzeroberfläche verantwortlich ist \parencite[vgl.][Kap. 4.4]{wolff_microservices_2018}. In der Praxis ist dies jedoch schwierig, da eine Webseite Inhalte von mehreren Services anzeigt. Besonders nach der Veröffentlichung von AngularJS\footnote{AngularJS ist ein JavaScript Framework, welches 2010 von Google entwickelt wurde und eine Open-Source-Software ist \parencite{angularjs}.}, gibt es immer mehr JavaScript Frameworks, die zur Verbesserung der Benutzererfahrung mehr Logik in das Frontend legen. React.js ist eines dieser Frameworks.
-Die Beliebtheit dieser Frameworks kommt daher, dass jede Webseite nicht mehr als einzelne Seite betrachtet wird, sondern Informationen zwischen Benutzeroberflächen hinweg verwaltet werden \parencite[vgl.][Kap. 9.1]{wolff_microservices_2018}. Ein Datenabruf kann über mehrere Webseiten hinweg geteilt werden. Somit wird die Performance verbessert. Das Routing zwischen den Webseiten wird durch das Framework verwaltet. Dieser Ansatz wird als Single-Page-Application (SPA) bezeichnet und unterscheidet sich von der Idee des MVC-Ansatzes (siehe \cref{sec:mvc}). Die nötigen Informationen werden aktiv von der View geladen \parencite{single-page-webanwendung_2019}.
+Die volle Unabhängigkeit eines Microservice kann nur erreicht werden, wenn dieser auch für die Benutzeroberfläche verantwortlich ist \parencite[vgl.][Kap. 4.4]{wolff_microservices_2018}. In der Praxis ist dies jedoch schwierig, da eine Webseite Inhalte von mehreren Services anzeigt. Besonders nach der Veröffentlichung von AngularJS\footnotemark gibt es immer mehr JavaScript Frameworks, die zur Verbesserung der Benutzererfahrung mehr Logik in das Frontend legen. React.js ist eines dieser Frameworks.
+Die Beliebtheit dieser Frameworks kommt daher, dass jede Webseite nicht mehr als einzelne Seite betrachtet wird, sondern Informationen zwischen Benutzeroberflächen hinweg verwaltet werden \parencite[vgl.][Kap. 9.1]{wolff_microservices_2018}. Ein Datenabruf kann über mehrere Webseiten hinweg geteilt werden, wodurch die Performance verbessert wird. Das Routing zwischen den Webseiten wird durch das Framework verwaltet. Dieser Ansatz wird als Single-Page-Application (SPA) bezeichnet. Da die nötigen Informationen aktive von der View geladen werden, unterscheidet sich das von der Idee des MVC-Ansatzes \parencite{single-page-webanwendung_2019}.
+
+\footnotetext{AngularJS ist ein JavaScript Framework, welches 2010 von Google entwickelt wurde und eine Open-Source-Software ist \parencite{angularjs}.}
 
 Auch kann es vorkommen, dass ein Microservice keine graphische Darstellung benötigt, da dieser ausschließlich E-Mails verschickt oder die beliebtesten Filme ermittelt. Folglich ist es umstritten, ob Microservices immer eine Benutzeroberfläche haben sollten.
 
