--- a/sections/Methodik/interviewfragen.tex
+++ b/sections/Methodik/interviewfragen.tex
@@ -2,4 +2,4 @@
 
 Die Fragen für die Interviews wurden aus den Ergebnissen der Literaturrecherche erstellt. So begann die Bachelorarbeit mit der Durchführung einer Literaturrecherche, in welcher Microservices und Softwarearchitektur definiert und beschrieben wurden. Nachfolgend wurden die zur Erstellung und Einteilung von Microservices notwendigen Faktoren benannt und beschrieben.  Die wichtigsten Inhalte wurden anschließend in \cref{sec:bedingungen} zu neun Bedingungen zusammengetragen und als Grundlage für die Fragestellung verwendet.
 
-Dabei zielen die Fragen zum einen darauf ab, die einzelnen Annahmen zu validieren und zum anderen den Experten die Möglichkeit zu geben ihre Expertise einzubringen. Um dem gerecht zu werden, wurden vor allem offene Fragen gewählt. Gleichwohl orientierten sich die Fragestellungen an den in \cref{sec:bedingungen} definierten Bedingungen, sodass die Antworten aus den Interviews mit den Erkenntnissen aus der Literaturrecherche vergleichbar sind.
+Dabei zielen die Fragen zum einen darauf ab, die einzelnen Annahmen zu validieren und zum anderen den Experten die Möglichkeit zu geben ihre Expertise einzubringen. Um dem gerecht zu werden, wurden vor allem offene Fragen gewählt. Gleichwohl orientieren sich die Fragestellungen an den in \cref{sec:bedingungen} definierten Bedingungen, sodass die Antworten aus den Interviews mit den Erkenntnissen aus der Literaturrecherche vergleichbar sind.
